fix handlers. clean code
